--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>HiadenHidden</title>
+<title>Proxies - HiadenHidden</title>
 <link rel="icon" href="https://i.ibb.co/gy24VpB/ad.png">
 </head>
 <img src="https://i.ibb.co/pKnVQMV/catwp.jpg" alt="Catwp" />
