--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
 <link rel="icon" href="https://i.ibb.co/gy24VpB/ad.png">
 </head>
 <img src="https://i.ibb.co/pKnVQMV/catwp.jpg" alt="Catwp" />
-<body background= https://i.ibb.co/gy24VpB/ad.png>
-
+<body>
 <h1 style="color:red;">hi</h1>
 <p style="color:red;">test.</p>
 <p style="color:red;">we are cool here.</p>
-<p><a href="https://github.com/hiadenhidden">
-<img src="https://i.ibb.co/djShywM/2gith.png" alt="git" width="100" height="100">
-</a></p>
-<p><a href="https://glitch.com/@hiadenhidden">
-<img src="https://i.ibb.co/rkQ9SRS/glitc.png" alt="gli" width="100" height="100">
+<p><a href="https://hiadenhidden.github.io">
+<img src="https://i.ibb.co/gy24VpB/ad.png" alt="ghp" width="100" height="100">
 </a></p>
 
   
