--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <h1 style="color:red;">hi</h1>
 <p style="color:red;">test.</p>
 <p style="color:red;">we are cool here.</p>
-<p><a href="https://hiadenhidden.github.io">
+<p><a href="https://bit.ly/soupnet">
+<img src="https://i.ibb.co/wSQ5pdt/snet.png" alt="sne" width="100" height="100">
+</a><a href="https://hiadenhidden.github.io">
 <img src="https://i.ibb.co/gy24VpB/ad.png" alt="ghp" width="100" height="100">
 </a></p>
 
