--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Proxies - HiadenHidden</title>
 <link rel="icon" href="https://i.ibb.co/gy24VpB/ad.png">
 </head>
-<body>
+<body background= https://i.ibb.co/C7s8BhG/hhg.png>
 <p><a href="https://bit.ly/soupnet">
 <img src="https://i.ibb.co/wSQ5pdt/snet.png" alt="sne" width="100" height="100">
 </a><a href="https://hiadenhidden.github.io">
