--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <title>Proxies - HiadenHidden</title>
 <link rel="icon" href="https://i.ibb.co/gy24VpB/ad.png">
 </head>
-<body background= https://i.ibb.co/C7s8BhG/hhg.png>
+<body background= https://i.ibb.co/RCxdzt1/blue.png>
 <p><a href="https://bit.ly/soupnet">
-<img src="https://i.ibb.co/wSQ5pdt/snet.png" alt="sne" width="100" height="100">
+<img src="https://i.ibb.co/L93T2Yr/snet.png" alt="sne" width="100" height="100">
 </a><a href="https://hiadenhidden.github.io">
 <img src="https://i.ibb.co/gy24VpB/ad.png" alt="ghp" width="100" height="100">
 </a></p>
